rupe shown on stripe page

--- a/src/utils/payments/PaymentIntentStripe.css
+++ b/src/utils/payments/PaymentIntentStripe.css
@@ -75,3 +75,8 @@
   -webkit-animation: loading 2s infinite ease;
   animation: loading 2s infinite ease;
 }
+
+#amount_h1{
+  display: flex;
+  justify-content: space-around;
+}
